tests/snapshots/examples_fixtures/type_classes__ClassMatchableEffects__Flow__Audit.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/ClassMatchableEffects/Flow/Audit.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `ClassMatchableEffects.Flow.Audit` doesn't match file path `examples/type_classes/ClassMatchableEffects/Flow/Audit.flx`.

  examples/type_classes/ClassMatchableEffects/Flow/Audit.flx:1:1
  |
1 | module ClassMatchableEffects.Flow.Audit {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
